--- a/src/app/add-flight.component.html
+++ b/src/app/add-flight.component.html
@@ -5,8 +5,9 @@
     <div class="modal-body">
         <div class="form-group">
             <label for="flightDate">Date</label>
+            <em *ngIf="newFlightForm.controls.date?.invalid && newFlightForm.controls.date?.touched">Required</em>
             <div class="input-group">
-                <input (ngModel)="newFlight.date" name="date" id="flightDate" class="form-control" placeholder="yyyy-mm-dd" name="date" ngbDatepicker #dp="ngbDatepicker">
+                <input (ngModel)="newFlight.date" name="date" required id="flightDate" class="form-control" placeholder="yyyy-mm-dd" name="date" ngbDatepicker #dp="ngbDatepicker">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary fa fa-calendar" (click)="dp.toggle()" type="button"></button>
                 </div>
@@ -14,27 +15,31 @@
         </div>
         <div class="form-group">
             <label for="flightTakeoff">Takeoff</label>
+            <em *ngIf="newFlightForm.controls.takeoff?.invalid && newFlightForm.controls.takeoff?.touched">Required</em>
             <input (ngModel)="newFlight.takeoff" name="takeoff" required id="flightTakeoff" type="text" class="form-control" placeholder="takeoff location..." />
         </div>
         <div class="form-group">
             <label for="flightLanding">Landing</label>
+            <em *ngIf="newFlightForm.controls.landing?.invalid && newFlightForm.controls.landing?.touched">Required</em>
             <input (ngModel)="newFlight.landing" name="landing" required id="flightLanding" type="text" class="form-control" placeholder="landing location..." />
         </div>
         <div class="form-group">
             <label for="flightDuration">Duration</label>
+            <em *ngIf="newFlightForm.controls.duration?.invalid && newFlightForm.controls.duration?.touched">Required</em>
             <input (ngModel)="newFlight.duration" name="duration" required id="flightDuration" type="text" type="number" class="form-control" placeholder="flight duration in minutes..." />
         </div>
         <div class="form-group">
             <label for="flightDescription">Description</label>
-            <textarea (ngModel)="newFlight.description" name="description" required id="flightDescription" type="text" class="form-control" placeholder="detail description..."></textarea>
+            <textarea (ngModel)="newFlight.description" name="description" id="flightDescription" type="text" class="form-control" placeholder="optional description..."></textarea>
         </div>
         <div class="form-group">
             <label for="flightRating">Rating</label>
+            <em *ngIf="newFlightForm.controls.rating?.invalid && newFlightForm.controls.rating?.touched">Required</em>
             <input (ngModel)="newFlight.rating" name="rating" required id="flightRating" type="text" type="number" class="form-control" placeholder="rate flight 1-5..." />
         </div>
     </div>
     <div class="modal-footer">
-        <button type="submit" class="btn btn-outline-dark">Add</button>
+        <button type="submit" [disabled]="newFlightForm.invalid" class="btn btn-outline-dark">Add</button>
         <button type="button" class="btn btn-outline-dark" (click)="close()">Close</button>
     </div>
 </form>
